RESOLVED FIXED51505
Detect WebProcess crashes sooner, without waiting for ReportCrash to finish
https://bugs.webkit.org/show_bug.cgi?id=51505
Summary Detect WebProcess crashes sooner, without waiting for ReportCrash to finish
Anders Carlsson
Reported 2010-12-22 16:02:32 PST
Detect WebProcess crashes sooner, without waiting for ReportCrash to finish
Attachments
Patch (9.73 KB, patch)
2010-12-22 16:07 PST, Anders Carlsson
darin: review+
Anders Carlsson
Comment 1 2010-12-22 16:02:50 PST
Anders Carlsson
Comment 2 2010-12-22 16:07:45 PST
Darin Adler
Comment 3 2010-12-22 16:11:58 PST
Comment on attachment 77270 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=77270&action=review > WebKit2/Platform/CoreIPC/Connection.h:103 > + // FIXME: Maybe this should be a flag passed to open? Maybe, but do we really need leave a FIXME behind? > WebKit2/Platform/CoreIPC/mac/ConnectionMac.cpp:112 > + m_connectionQueue.registerMachPortEventHandler(m_exceptionPort, WorkQueue::MachPortDataAvailable, > + WorkItem::create(this, &Connection::exceptionSourceEventHandler)); I do not like this indenting style. What happens when we rename something later? I think the style guide explicitly says not to do this.
Anders Carlsson
Comment 4 2010-12-22 16:15:42 PST
WebKit Review Bot
Comment 5 2010-12-22 16:33:35 PST
http://trac.webkit.org/changeset/74514 might have broken SnowLeopard Intel Release (Build)
Note You need to log in before you can comment on or make changes to this bug.