WebKit2/Platform/CoreIPC/mac/ConnectionMac.cpp
@@ -50,17 +50,24 @@ void Connection::platformInvalidate()
 
     ASSERT(m_sendPort);
     ASSERT(m_receivePort);
-    
+
     // Unregister our ports.
     m_connectionQueue.unregisterMachPortEventHandler(m_sendPort);
     m_sendPort = MACH_PORT_NULL;
 
     m_connectionQueue.unregisterMachPortEventHandler(m_receivePort);
     m_receivePort = MACH_PORT_NULL;
+
+    if (m_exceptionPort) {
+        m_connectionQueue.unregisterMachPortEventHandler(m_exceptionPort);
+        m_exceptionPort = MACH_PORT_NULL;
+    }
 }
 
 void Connection::platformInitialize(Identifier identifier)
 {
+    m_exceptionPort = MACH_PORT_NULL;
+
     if (m_isServer) {
         m_receivePort = identifier;
         m_sendPort = MACH_PORT_NULL;
@@ -96,8 +103,14 @@ bool Connection::open()
     setMachPortQueueLength(m_receivePort, MACH_PORT_QLIMIT_LARGE);
 
     // Register the data available handler.
-    m_connectionQueue.registerMachPortEventHandler(m_receivePort, WorkQueue::MachPortDataAvailable, 
-                                                   WorkItem::create(this, &Connection::receiveSourceEventHandler));
+    m_connectionQueue.registerMachPortEventHandler(m_receivePort, WorkQueue::MachPortDataAvailable, WorkItem::create(this, &Connection::receiveSourceEventHandler));
+
+    // If we have an exception port, register the data available handler and send over the port to the other end.
+    if (m_exceptionPort) {
+        m_connectionQueue.registerMachPortEventHandler(m_exceptionPort, WorkQueue::MachPortDataAvailable, WorkItem::create(this, &Connection::exceptionSourceEventHandler));
+
+        send(CoreIPCMessage::SetExceptionPort, 0, MachPort(m_exceptionPort, MACH_MSG_TYPE_MAKE_SEND));
+    }
 
     return true;
 }
@@ -350,8 +363,62 @@ void Connection::receiveSourceEventHandler()
         
         return;
     }
-    
+
+    if (messageID == MessageID(CoreIPCMessage::SetExceptionPort)) {
+        MachPort exceptionPort;
+        if (!arguments->decode(exceptionPort))
+            return;
+
+        setMachExceptionPort(exceptionPort.port());
+        return;
+    }
+
     processIncomingMessage(messageID, arguments.release());
 }    
+
+void Connection::exceptionSourceEventHandler()
+{
+    ReceiveBuffer buffer;
+
+    mach_msg_header_t* header = readFromMachPort(m_exceptionPort, buffer);
+    if (!header)
+        return;
+
+    // We've read the exception message. Now send it on to the real exception port.
+
+    // The remote port should have a send once right.
+    ASSERT(MACH_MSGH_BITS_REMOTE(header->msgh_bits) == MACH_MSG_TYPE_MOVE_SEND_ONCE);
+
+    // Now get the real exception port.
+    mach_port_t exceptionPort = machExceptionPort();
+
+    // First, get the complex bit from the source message.
+    mach_msg_bits_t messageBits = header->msgh_bits & MACH_MSGH_BITS_COMPLEX;
+    messageBits |= MACH_MSGH_BITS(MACH_MSG_TYPE_COPY_SEND, MACH_MSG_TYPE_MOVE_SEND_ONCE);
+
+    header->msgh_bits = messageBits;
+    header->msgh_local_port = header->msgh_remote_port;
+    header->msgh_remote_port = exceptionPort;
+
+    // Now send along the message.
+    kern_return_t kr = mach_msg(header, MACH_SEND_MSG, header->msgh_size, 0, MACH_PORT_NULL, MACH_MSG_TIMEOUT_NONE, MACH_PORT_NULL);
+    if (kr != KERN_SUCCESS) {
+        LOG_ERROR("Failed to send message to real exception port, error %x", kr);
+        ASSERT_NOT_REACHED();
+    }
+
+    connectionDidClose();
+}
+
+void Connection::setShouldCloseConnectionOnMachExceptions()
+{
+    ASSERT(m_exceptionPort == MACH_PORT_NULL);
+
+    if (mach_port_allocate(mach_task_self(), MACH_PORT_RIGHT_RECEIVE, &m_exceptionPort) != KERN_SUCCESS)
+        ASSERT_NOT_REACHED();
+
+    if (mach_port_insert_right(mach_task_self(), m_exceptionPort, m_exceptionPort, MACH_MSG_TYPE_MAKE_SEND) != KERN_SUCCESS)
+        ASSERT_NOT_REACHED();
+}
 
 } // namespace CoreIPC
